# practice_python

./: .gitignore  pyproject.toml
docker/: docker-compose.yml
practice_python/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  permissions.py  secializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
